--- a/game.html
+++ b/game.html
@@ -19,12 +19,13 @@
 		<div id="game" class="justif-center flex-column">
 			<div id="hud">
 				<div id="hud-item">
-					<p class="hud-prefix">
+					<p class="hud-prefix" id="progressText">
 						Question
 					</p>
-					<h1 class="hud-main-text" id="questionCounter">
-						
-					</h1>
+					<div id="progressBar">
+						<div id="progressBarFull">
+						</div>
+					</div>
 				</div>
 				<div id="hud-item">
 					<p class="hud-prefix">
