--- a/index.html
+++ b/index.html
@@ -1,24 +1,37 @@
-<!DOCTYPE HTML>
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Trivia Time!</title>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="app.css">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-<!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">-->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Congrats!</title>
+    <link rel="stylesheet" href="app.css" />
 </head>
-
 <body>
-	<div class="container">
-		<div id="home" class="flex-center flex-column">
-			<h1>Quiz App</h1>
-			<a class="btn" href="game.html">Play</a>
-			<a class="btn" href="highscores.html">High Scores!</a>
-		</div>
-	</div>
+<div class="container">
+    <div id="end" class="flex-center flex-column">
+        <h1 id="finalScore"></h1>
+        <form>
+            <input
+                    type="text"
+                    name="username"
+                    id="username"
+                    placeholder="username"
+            />
+            <button
+                    type="submit"
+                    class="btn"
+                    id="saveScoreBtn"
+                    onclick="saveHighScore(event)"
+                    disabled
+            >
+                Save
+            </button>
+        </form>
+        <a class="btn" href="/game.html">Play Again</a>
+        <a class="btn" href="/">Go Home</a>
+    </div>
+</div>
+<script src="end.js"></script>
 </body>
+</html>
