--- a/index.html
+++ b/index.html
@@ -4,34 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Congrats!</title>
+    <title>Trivia Time!</title>
     <link rel="stylesheet" href="app.css" />
 </head>
 <body>
 <div class="container">
-    <div id="end" class="flex-center flex-column">
-        <h1 id="finalScore"></h1>
-        <form>
-            <input
-                    type="text"
-                    name="username"
-                    id="username"
-                    placeholder="username"
-            />
-            <button
-                    type="submit"
-                    class="btn"
-                    id="saveScoreBtn"
-                    onclick="saveHighScore(event)"
-                    disabled
-            >
-                Save
-            </button>
-        </form>
-        <a class="btn" href="/game.html">Play Again</a>
-        <a class="btn" href="/">Go Home</a>
+    <div id="home" class="flex-center flex-column">
+        <h1>Quiz App</h1>
+        <a class="btn" href="game.html">Play</a>
+        <a class="btn" href="highScores.html">High Scores</a>
     </div>
 </div>
-<script src="end.js"></script>
 </body>
 </html>
